--- a/doner_laden_backend/Dockerfile
+++ b/doner_laden_backend/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.8
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /app
 WORKDIR /app
-COPY    requirements.txt /app/
-RUN pip3 install -r requirements.txt
+COPY requirements.txt /app/
+RUN pip3 install requirements.txt
 COPY . /app/
