--- a/doner_laden_backend/Dockerfile
+++ b/doner_laden_backend/Dockerfile
@@ -3,5 +3,5 @@ ENV PYTHONUNBUFFERED 1
 RUN mkdir /app
 WORKDIR /app
 COPY requirements.txt /app/
-RUN pip3 install requirements.txt
+RUN pip3 install -r requirements.txt
 COPY . /app/
